# riot-take-home

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/api/: app.py  config.py
app/core/: base.py  encryption.py  signing.py
app/models/: config.py  dto.py
tests/: test_encrypt.py  test_integration.py  test_sign.py
