[project]
name = "egnima"
version = "0.1.0b1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "fastapi[all]>=0.128.0",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "pre-commit>=4.0.0",
    "pyright>=1.1.404",
    "bandit>=1.7.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Ruff configuration
[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py314"

# Exclude common directories and files
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d",
    ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn",
    ".tox", ".venv", ".vscode", "__pypackages__", "_build",
    "buck-out", "build", "dist", "node_modules", "site-packages",
]

[tool.ruff.lint]
# Enable preview mode for new rules and features
preview = true

select = [
    "E",
    "W",
    "F",
    "UP",
    "B",
    "C4",
    "I",
    "PL",
    "FAST",
    "ICN",
    "ARG001",
    "RET",
    "SIM",
]

ignore = [
    "E501",
    "B008",
    "PLR0913",
    "PLR0915",
    "PLR6301",
    "PLR2004",
    "SIM108",
]

fixable = ["ALL"]
unfixable = []


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
]
runtime-evaluated-decorators = [
    "fastapi.APIRouter",
    "fastapi.Depends",
    "fastapi.app",
    "fastapi.APIRouter",
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Security",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",
    "ARG001",
    "S101",
    "PLR2004",
    "PLR0913",
]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.14"
include = ["app"]
exclude = [
    ".venv",
    "build",
    "dist",
    "__pycache__",
    ".pytest_cache",
    ".ruff_cache",
]

strictListInference = true
strictDictionaryInference = true
strictSetInference = true

reportMissingTypeStubs = true
reportUnknownMemberType = true
reportUnknownVariableType = true
reportUnknownParameterType = true
reportUnknownLambdaType = true
reportUnknownArgumentType = false
reportGeneralTypeIssues = "warning"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = ["B101", "B601"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"
